Adicionado o path para obtenção de todas as categorias existentes.
